--- a/main.html
+++ b/main.html
@@ -7,9 +7,52 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+	<table border = "1" style = "width:100%;">
+
+		<thead>
+			<tr>
+				<td>Name</td>
+				<td>Roll Number</td>
+			</tr>
+		</thead>
+
+		<tbody>
+			<tr>
+				<td>1</td>
+				<td>2</td>
+			</tr>
+
+			<tr>
+				<td>3</td>
+				<td>4</td>
+			</tr>
+
+			<tr>
+				<td>5</td>
+				<td>6</td>
+			</tr>
+		</tbody>
+		
+	</table>
+
+	<h1>List of medias</h1>
+
+	<ol>
+		<li>
+			<img src = "https://picsum.photos/id/123/200/300" alt = "img"/>
+		</li>
+		<li>
+			<video controls src = "http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+				
+			</video>
+		</li>
+		<li>
+			<audio controls src = "http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+				
+			</audio>
+		</li>
+	</ol>
 
 </body>
 
